tests/ui/coroutine/print/coroutine-print-verbose-3.stderr
error[E0308]: mismatched types
  --> $DIR/coroutine-print-verbose-3.rs:8:5
   |
LL |       let coroutine: () = #[coroutine]
   |                      -- expected due to this
LL | /     || {
LL | |
LL | |         yield 1i32;
LL | |         return x;
LL | |     };
   | |_____^ expected `()`, found coroutine
   |
   = note: expected unit type `()`
              found coroutine `{main::{closure#0} upvar_tys=?4t resume_ty=() yield_ty=i32 return_ty=&'?1 str}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
